intialize the tablayout with view pager

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
-    <string name="app_name">دليل الجاسر</string>
+    <string name="app_name">دليل الجاسر العقاري</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="tab_offers">المعروض</string>
+    <string name="tab_demands">المطلوب</string>
+    <string name="tab_history">السجل</string>
 </resources>
