finishing the add estate screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,44 @@
     <string name="fab_add_estate_contentDescription">add estate</string>
     <string name="tabLayout_contentDescription">list type</string>
     <string name="no_estates">لا يوجد عقارات لعرضها</string>
+    <string name="Add_estate_activity_title">إضافة عقار</string>
+    <string name="hint_estate_type">نوع العقار</string>
+    <string name="hint_location">العنوان</string>
+    <string name="hint_rooms">عدد الغرف</string>
+    <string name="hint_area">المساحة</string>
+    <string name="hint_floor">الطابق</string>
+    <string name="hint_direction">الاتجاه</string>
+    <string name="hint_interface">الواجهة</string>
+    <string name="hint_estate_situation">حالة العقار</string>
+    <string name="hint_furniture">الفرش</string>
+    <string name="hint_furniture_situation">حالة الفرش</string>
+    <string name="hint_legal">الفراغة</string>
+    <string name="hint_price">السعر</string>
+    <string name="hint_positives">الميّزات</string>
+    <string name="hint_negatives">السلبيات</string>
+    <string name="hint_owner">المالك</string>
+    <string name="hint_owner_tel">هاتف المالك</string>
+    <string name="hint_logger">مسجل العقار</string>
+    <string name="hint_logger_tel">هاتف مسجل العقار</string>
+    <string name="hint_priority">الأولوية</string>
+    <string name="hint_date">تاريخ التسجيل</string>
+    <string name="hint_floor_houses">عدد المنازل في الطابق</string>
+    <string name="save_button_text">حفظ</string>
+    <string name="add_estate_titles_contract">معلومات العقد</string>
+    <string name="add_estate_titles_estate">معلومات العقار</string>
+    <string name="add_estate_titles_image">الصور</string>
+    <string name="add_estate_titles_contact">معلومات التواصل</string>
+    <string name="bet_text">رهنية</string>
+    <string name="rent_text">آجار</string>
+    <string name="sale_text">بيع</string>
+    <string name="offer_text">للعرض</string>
+    <string name="demand_text">للطلب</string>
+    <string name="dialog_title_area">أدخل المساحة</string>
+    <string name="dialog_title_price">أدخل السعر</string>
+    <string name="slider_description">slider</string>
+    <string name="btn_description">button</string>
+    <string name="et_description">entry</string>
+    <string name="hint_renter_standards">معايير المؤجر</string>
+    <string name="dialog_title">أدخل</string>
+    <string name="dialog_hint_logger">اسم المكتب أو المندوب</string>
 </resources>
